# czsplicer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  index.html
hooks/: pre-commit
scripts/: scan_adium_themes.sh
src/: builtin.css  builtin.rs  commands.rs  csv.rs  filter.rs  format.rs  mailbox.rs  main.rs  markdown.rs  md_thread.rs  mermaid.rs  redact.rs  render.rs  secrets.rs  theme.rs  thread.rs
tests/: integration.rs
tests/common/: mod.rs
tests/fixtures/Lowercase.AdiumMessageStyle/Contents/: Info.plist
tests/fixtures/Lowercase.AdiumMessageStyle/Contents/Resources/: Status.html
tests/fixtures/Lowercase.AdiumMessageStyle/Contents/Resources/Styles/: Base.css
tests/fixtures/Lowercase.AdiumMessageStyle/Contents/Resources/incoming/: Content.html
tests/fixtures/Spike.AdiumMessageStyle/Contents/: Info.plist
tests/fixtures/Spike.AdiumMessageStyle/Contents/Resources/: Status.html  main.css
tests/fixtures/Spike.AdiumMessageStyle/Contents/Resources/Incoming/: Content.html  NextContent.html
tests/fixtures/Spike.AdiumMessageStyle/Contents/Resources/Outgoing/: Content.html  NextContent.html
tests/fixtures/Spike.AdiumMessageStyle/Contents/Resources/Variants/: Dark.css  Light.css
