[package]
name = "czsplicer"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
authors = ["Chris Lee <clee@mg8.org>"]
license = "MIT"
description = "CLI to inspect, extract, edit/redact, and repack .cbor.zstd log streams (Tailscale Aperture captures)"
repository = "https://tangled.org/clee.sh/czsplicer"
homepage = "https://tangled.org/clee.sh/czsplicer"
keywords = ["cbor", "zstd", "cli", "aperture", "log"]
categories = ["command-line-utilities", "encoding"]
readme = "README.md"
exclude = ["hooks/"]

[[bin]]
name = "czsplicer"
path = "src/main.rs"

[dependencies]
ciborium = "0.2"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
anyhow = "1"
regex = "1"
base64 = "0.22"
blake3 = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }

[profile.release]
opt-level = 3
